...
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/Toolbar"
                app:title="@string/app_name"
                app:titleTextColor="@android:color/white"/>

...
            android:visibility="gone"
            tools:visibility="visible"/>

        <android.support.v7.widget.RecyclerView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/recyclerViewRecipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".features.recipe_list.RecipeListActivity"/>

    </LinearLayout>

...
